Remove guava and use java 8 constructs