@@ -19,12 +19,29 @@
 
 package springfox.documentation.spring.web.plugins;
 
+import static springfox.documentation.builders.BuilderDefaults.defaultIfAbsent;
+import static springfox.documentation.builders.BuilderDefaults.nullToEmptyList;
+import static springfox.documentation.schema.AlternateTypeRules.DIRECT_SUBSTITUTION_RULE_ORDER;
+import static springfox.documentation.schema.AlternateTypeRules.GENERIC_SUBSTITUTION_RULE_ORDER;
+import static springfox.documentation.schema.AlternateTypeRules.newRule;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+
+import org.springframework.web.bind.annotation.RequestMethod;
+
 import com.fasterxml.classmate.ResolvedType;
 import com.fasterxml.classmate.TypeResolver;
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.collect.Ordering;
-import org.springframework.web.bind.annotation.RequestMethod;
+
 import springfox.documentation.PathProvider;
 import springfox.documentation.annotations.Incubating;
 import springfox.documentation.schema.AlternateTypeRule;
@@ -48,18 +65,6 @@ import springfox.documentation.spi.service.contexts.DocumentationContext;
 import springfox.documentation.spi.service.contexts.DocumentationContextBuilder;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
-import static com.google.common.collect.FluentIterable.*;
-import static com.google.common.collect.Lists.*;
-import static com.google.common.collect.Maps.*;
-import static com.google.common.collect.Sets.*;
-import static springfox.documentation.builders.BuilderDefaults.*;
-import static springfox.documentation.schema.AlternateTypeRules.*;
-
 /**
  * A builder which is intended to be the primary interface into the Springfox framework.
  * Provides sensible defaults and convenience methods for configuration.
@@ -69,22 +74,22 @@ public class Docket implements DocumentationPlugin {
   public static final String DEFAULT_GROUP_NAME = "default";
 
   private final DocumentationType documentationType;
-  private final List<SecurityContext> securityContexts = newArrayList();
-  private final Map<RequestMethod, List<ResponseMessage>> responseMessages = newHashMap();
-  private final List<Parameter> globalOperationParameters = newArrayList();
-  private final List<Function<TypeResolver, AlternateTypeRule>> ruleBuilders = newArrayList();
-  private final Set<Class> ignorableParameterTypes = newHashSet();
-  private final Set<String> protocols = newHashSet();
-  private final Set<String> produces = newHashSet();
-  private final Set<String> consumes = newHashSet();
-  private final Set<ResolvedType> additionalModels = newHashSet();
-  private final Set<Tag> tags = newHashSet();
+  private final List<SecurityContext> securityContexts = new ArrayList<>();
+  private final Map<RequestMethod, List<ResponseMessage>> responseMessages = new HashMap<>();
+  private final List<Parameter> globalOperationParameters = new ArrayList<>();
+  private final List<Function<TypeResolver, AlternateTypeRule>> ruleBuilders = new ArrayList<>();
+  private final Set<Class> ignorableParameterTypes = new HashSet<>();
+  private final Set<String> protocols = new HashSet<>();
+  private final Set<String> produces = new HashSet<>();
+  private final Set<String> consumes = new HashSet<>();
+  private final Set<ResolvedType> additionalModels = new HashSet<>();
+  private final Set<Tag> tags = new HashSet<>();
 
   private PathProvider pathProvider;
   private List<? extends SecurityScheme> securitySchemes;
-  private Ordering<ApiListingReference> apiListingReferenceOrdering;
-  private Ordering<ApiDescription> apiDescriptionOrdering;
-  private Ordering<Operation> operationOrdering;
+  private Comparator<ApiListingReference> apiListingReferenceOrdering;
+  private Comparator<ApiDescription> apiDescriptionOrdering;
+  private Comparator<Operation> operationOrdering;
 
   private ApiInfo apiInfo = ApiInfo.DEFAULT;
   private String groupName = DEFAULT_GROUP_NAME;
@@ -92,10 +97,10 @@ public class Docket implements DocumentationPlugin {
   private GenericTypeNamingStrategy genericsNamingStrategy = new DefaultGenericTypeNamingStrategy();
   private boolean applyDefaultResponseMessages = true;
   private String host = "";
-  private Optional<String> pathMapping = Optional.absent();
+  private Optional<String> pathMapping = Optional.empty();
   private ApiSelector apiSelector = ApiSelector.DEFAULT;
   private boolean enableUrlTemplating = false;
-  private List<VendorExtension> vendorExtensions = newArrayList();
+  private List<VendorExtension> vendorExtensions = new ArrayList<>();
 
 
   public Docket(DocumentationType documentationType) {
@@ -252,7 +257,7 @@ public class Docket implements DocumentationPlugin {
    * java.lang.reflect.Type)
    */
   public Docket alternateTypeRules(AlternateTypeRule... alternateTypeRules) {
-    this.ruleBuilders.addAll(from(newArrayList(alternateTypeRules)).transform(identityRuleBuilder()).toList());
+    this.ruleBuilders.addAll(Arrays.stream(alternateTypeRules).map(identityRuleBuilder()).collect(Collectors.toList()));
     return this;
   }
 
@@ -265,7 +270,7 @@ public class Docket implements DocumentationPlugin {
    * @param operationOrdering
    * @return this Docket
    */
-  public Docket operationOrdering(Ordering<Operation> operationOrdering) {
+  public Docket operationOrdering(Comparator<Operation> operationOrdering) {
     this.operationOrdering = operationOrdering;
     return this;
   }
@@ -325,7 +330,7 @@ public class Docket implements DocumentationPlugin {
    * @param apiListingReferenceOrdering
    * @return this Docket
    */
-  public Docket apiListingReferenceOrdering(Ordering<ApiListingReference> apiListingReferenceOrdering) {
+  public Docket apiListingReferenceOrdering(Comparator<ApiListingReference> apiListingReferenceOrdering) {
     this.apiListingReferenceOrdering = apiListingReferenceOrdering;
     return this;
   }
@@ -341,7 +346,7 @@ public class Docket implements DocumentationPlugin {
    * @return this Docket
    * @see springfox.documentation.spring.web.scanners.ApiListingScanner
    */
-  public Docket apiDescriptionOrdering(Ordering<ApiDescription> apiDescriptionOrdering) {
+  public Docket apiDescriptionOrdering(Comparator<ApiDescription> apiDescriptionOrdering) {
     this.apiDescriptionOrdering = apiDescriptionOrdering;
     return this;
   }
@@ -378,7 +383,7 @@ public class Docket implements DocumentationPlugin {
    * @return this Docket
    */
   public Docket pathMapping(String path) {
-    this.pathMapping = Optional.fromNullable(path);
+    this.pathMapping = Optional.ofNullable(path);
     return this;
   }
 
@@ -408,7 +413,7 @@ public class Docket implements DocumentationPlugin {
    */
   public Docket additionalModels(ResolvedType first, ResolvedType... remaining) {
     additionalModels.add(first);
-    additionalModels.addAll(newHashSet(remaining));
+    additionalModels.addAll(new HashSet<>(Arrays.asList(remaining)));
     return this;
   }
 
@@ -421,7 +426,7 @@ public class Docket implements DocumentationPlugin {
    */
   public Docket tags(Tag first, Tag... remaining) {
     tags.add(first);
-    tags.addAll(newHashSet(remaining));
+    tags.addAll(new HashSet(Arrays.asList(remaining)));
     return this;
   }
 
